# ahkunwrapped

./: .editorconfig  .gitignore  .hgignore  NOTICE  README.md  autohotkey.py  example.ahk  example.py  example.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.ahk  tests.py
ahkunwrapped/: __init__.py  autohotkey.py
examples/: example.ahk  example.py  example.spec
lib/AutoHotkey/: NOTICE
src/ahkunwrapped/: __init__.py  autohotkey.py
src/ahkunwrapped/lib/AutoHotkey/: NOTICE
src/ahkunwrapped/typings/: win32api.pyi  win32job.pyi
tests/: included.ahk  tests.ahk  tests.py
