[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahkunwrapped"
version = "3.0.0"
description = "Bundled and bridged AutoHotkey for full native code execution from Python."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Christopher Galpin" }
]
keywords = ["AutoHotkey", "AHK"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "pywin32>=311; platform_system=='Windows'",
]

[project.urls]
Homepage = "https://github.com/CodeOptimist/ahkunwrapped"

[dependency-groups]
dev = [
    "build~=1.0",
    "cogapp~=3.0",
    "hypothesis~=6.0",
    "psutil~=7.0",
    "pyinstaller~=6.0",
    "pytest~=9.0",
    "schedule~=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ahkunwrapped"]
exclude = [
    "src/ahkunwrapped/typings",
]
