[metadata]
name = ahkunwrapped
version = attr: ahkunwrapped.__version__
author = Christopher Galpin
url = https://github.com/CodeOptimist/ahkunwrapped
project_urls =
    Discord = https://discord.gg/Uz5rnWUkrV
description = Lightweight execution and bidirectional communication for native AutoHotkey code and scripts; full language support.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AutoHotkey, AHK
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows :: Windows Vista
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 8
    Operating System :: Microsoft :: Windows :: Windows 8.1
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Win32 (MS Windows)
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >= 3.6
packages = ahkunwrapped
install_requires =
    pywin32 >= 227; platform_system=='Windows'

[options.package_data]
ahkunwrapped = py.typed, lib/AutoHotkey/*
